@@ -1,6 +1,4 @@
 
-1458842 escaping in buffer match
-
 1444112  take syntax highlight patch for sh
 
 1443801  need better latex highlighter
