@@ -3,6 +3,8 @@ Fri May  5 10:24:33 EDT 2006
 	You can now define which characters can indent paragraphs in joerc
 	file: look for '-cpara'.
 
+	Allow escape sequences in syntax highlight strings.
+
 Wed May  3 21:10:21 EDT 2006
 
 	Better handling of 'joe -'
